--- a/app/src/main/res/layout/activity_shop_list.xml
+++ b/app/src/main/res/layout/activity_shop_list.xml
@@ -37,9 +37,11 @@
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kijelentkezés"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/logout"
+        android:backgroundTint="@color/darkGreen"
+        android:textColor="@color/yellowishBrown"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp" />
 
