--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,6 +9,17 @@
     android:background="@color/darkPeacockBlue"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/loginTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textColor="@color/yellowishBrown"
+        android:layout_marginTop="20dp" />
+
     <EditText
         android:id="@+id/editTextUserName"
         android:layout_width="match_parent"
@@ -55,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:textSize="18sp"
             android:layout_weight="1"
             android:text="@string/login"
             android:backgroundTint="@color/darkGreen"
@@ -65,6 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
+            android:textSize="18sp"
             android:layout_weight="1"
             android:text="@string/registration"
             android:backgroundTint="@color/darkGreen"
