--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/registration"
+        android:textStyle="bold"
         android:textSize="24sp"
         android:textAlignment="center"
         android:textColor="@color/yellowishBrown"
@@ -154,31 +155,38 @@
 
     <LinearLayout
         android:id="@+id/buttonContainer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/termsRadioGroup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/registerButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/registration"
+            android:textSize="18sp"
             android:textColor="@color/yellowishBrown"
             android:backgroundTint="@color/darkGreen"
             android:onClick="register" />
 
         <Button
             android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_weight="1"
+            android:layout_marginStart="16dp"
             android:text="@string/cancel"
+            android:textSize="18sp"
             android:textColor="@color/yellowishBrown"
             android:backgroundTint="@color/darkGreen"
             android:onClick="cancel" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
