--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:ems="10"
-        android:hint="@string/name"
-        android:inputType="text"
+        android:hint="@string/email_address"
+        android:inputType="textEmailAddress"
         android:minHeight="48dp"
         android:textColor="@color/yellowishBrown"
         app:layout_constraintBottom_toBottomOf="parent"
