--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -28,8 +28,8 @@
         android:layout_marginRight="10dp"
         android:minHeight="48dp"
         android:ems="10"
-        android:hint="@string/name"
-        android:inputType="text"
+        android:hint="@string/email_address"
+        android:inputType="textEmailAddress"
         android:textColor="@color/yellowishBrown"
         android:textColorHint="@color/green"
         android:backgroundTint="@color/green"
@@ -55,10 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_marginTop="20dp">
 
         <Button
             android:id="@+id/loginButton"
@@ -66,21 +63,23 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="18sp"
             android:layout_weight="1"
             android:text="@string/login"
+            android:textSize="18sp"
             android:backgroundTint="@color/darkGreen"
-            android:textColor="@color/yellowishBrown" />
+            android:textColor="@color/yellowishBrown"
+            android:onClick="login" />
 
         <Button
             android:id="@+id/registerButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:textSize="18sp"
             android:layout_weight="1"
             android:text="@string/registration"
+            android:textSize="18sp"
             android:backgroundTint="@color/darkGreen"
-            android:textColor="@color/yellowishBrown" />
+            android:textColor="@color/yellowishBrown"
+            android:onClick="register" />
     </LinearLayout>
 </LinearLayout>
