--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -55,13 +55,23 @@
             android:textColor="@color/green"
             android:layout_centerHorizontal="true" />
 
-        <Button
-            android:id="@+id/add_to_cart"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/price"
-            android:text="kosarba"
-            android:layout_centerHorizontal="true"/>
+            android:layout_below="@id/price"
+            android:layout_centerHorizontal="true">
+            <Button
+                android:id="@+id/add_to_cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kosárba"/>
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Törlés"/>
+        </LinearLayout>
 
     </RelativeLayout>
 
