--- a/app/src/main/res/menu/shop_list_menu.xml
+++ b/app/src/main/res/menu/shop_list_menu.xml
@@ -11,32 +11,41 @@
     <item
         android:id="@+id/cart"
         android:title="Cart"
-        android:icon="@drawable/shopping_cart"
+        android:icon="@drawable/best"
         app:showAsAction="always"
+        />
+
+    <item
+        android:id="@+id/actual_cart"
+        android:title="Cart"
+        android:icon="@drawable/shopping_cart"
+        app:showAsAction="never"
+        android:orderInCategory="1"
         />
 <!--        FIXME: ez az eredeti-->
 <!--    android:actionLayout=""-->
 
-    <item
+ <!--   <item
         android:id="@+id/view_selector"
         android:title="Search"
         android:icon="@drawable/view_grid"
         app:showAsAction="always"
-     />
+     />-->
 
-    <item
+   <!-- <item
         android:id="@+id/setting_button"
         android:title="Beállítások"
         app:showAsAction="never"
         app:actionViewClass="android.widget.SearchView"
         android:orderInCategory="2"
-        />
+        />-->
 
     <item
         android:id="@+id/log_out_button"
         android:title="Kijelentkezés"
         app:showAsAction="never"
         app:actionViewClass="android.widget.SearchView"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         />
+
 </menu>
