--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,11 @@
         <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:textStyle">bold</item>
     </style>
-    "
+
+    <style name="CustomRatingBar" parent="Widget.AppCompat.RatingBar">
+        <item name="android:progressDrawable">@drawable/custom_rating_star</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:maxHeight">48dp</item>
+        <item name="android:stepSize">1</item>
+    </style>
 </resources>
