--- a/app/src/main/res/menu/shop_list_menu.xml
+++ b/app/src/main/res/menu/shop_list_menu.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/cart"
-        android:title="Cart"
+        android:title="Best/Main"
         android:icon="@drawable/best"
         app:showAsAction="always"
         />
@@ -22,23 +22,6 @@
         app:showAsAction="never"
         android:orderInCategory="1"
         />
-<!--        FIXME: ez az eredeti-->
-<!--    android:actionLayout=""-->
-
- <!--   <item
-        android:id="@+id/view_selector"
-        android:title="Search"
-        android:icon="@drawable/view_grid"
-        app:showAsAction="always"
-     />-->
-
-   <!-- <item
-        android:id="@+id/setting_button"
-        android:title="Beállítások"
-        app:showAsAction="never"
-        app:actionViewClass="android.widget.SearchView"
-        android:orderInCategory="2"
-        />-->
 
     <item
         android:id="@+id/log_out_button"
