--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,14 @@
         <item name="android:maxHeight">48dp</item>
         <item name="android:stepSize">1</item>
     </style>
+
+
+    <style name="CustomMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:popupBackground">@color/darkGreen</item>
+        <item name="android:itemTextAppearance">@style/CustomMenuItemText</item>
+    </style>
+
+    <style name="CustomMenuItemText" parent="TextAppearance.AppCompat.Widget.ActionBar.Menu">
+        <item name="android:textColor">@color/yellowishBrown</item>
+    </style>
 </resources>
