--- a/app/src/main/res/layout/activity_shop_list.xml
+++ b/app/src/main/res/layout/activity_shop_list.xml
@@ -35,7 +35,7 @@
         android:id="@+id/subtitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Üdvözlünk a webshopunkban"
+        android:text="A kosárba és a törlés gomb más oldalon is megjelenik, de ott nem működnek"
         android:textSize="18sp"
         android:textColor="@color/yellowishBrown"
         app:layout_constraintTop_toBottomOf="@id/titleText"
